# checklist

./: .gitignore  .gitmodules  CMakeLists.txt  CelebrationOverlay.qml  ChecklistScreen.qml  LoadingScreen.qml  Main.qml  README.md  checklistmanager.cpp  checklistmanager.h  copy_wasm_files.sh  generate_index.sh  index.html  languagemanager.cpp  languagemanager.h  main.cpp
.github/workflows/: build-wasm.yml  deploy-pages.yml
checklists/: example.csv  example.md  index.json  intervalltraining.csv  intervalltraining.md  krafttraining.csv  palatschinken.csv  palatschinken.md  yoga_flow.csv  zaehneputzen.csv  zaehneputzen.md
deploy/: install-deps.sh  setup-autostart.sh
translations/: checklist_de.ts
wasm/: checklist.html  checklist.js
